tests/sksl/errors/InvalidAssignmentPipelineInputs.glsl
### Compilation failed:

error: 7: cannot modify pipeline input variable 'stageInput'
    stageInput = 5;
    ^^^^^^^^^^
error: 8: cannot modify pipeline input variable 'stageInputInBlock'
    stageInputInBlock = 6;
    ^^^^^^^^^^^^^^^^^
2 errors
